--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,10 @@
   "version": "1.1",
   "description": "Adds a browser action that monitors resource usage of all browser processes.",
   "permissions": [
-    "experimental", "tabs"
+    "experimental", "tabs", "<all_urls>"
   ],
-  "browser_action": {
-      "default_title": "Process Monitor",
-      "default_icon": "icon.png",
-      "default_popup": "popup.html"
+  "background": {
+    "scripts": ["popup.js"]
   },
   "manifest_version": 2
 }
